Bug 734062 - stale image in the image cache when an updated version is fetched into HTML5 offline cache in background, r=joedrew